6.11.1 (25-04-2020)
- Refactor: Replace fenixedu-academic-treasury dependency by fenixedu-academic-treasury-base and fenixedu-academic-treasury-ui

6.11.0 (04-04-2020)
- Refactor: Upgraded dependency of fenixedu-academic-core and academic-extensions
- Refactor: Moved specific organizational Units subclasses from academic-core 

6.10.3 (03-04-2020)
- New feature: adding Media menu

6.10.2 (31-03-2020)
- Bug fix: Announcements menu is now consistent in Create/Edit

6.10.1 (28-03-2020)
- Improvement: Remove ECTS Institution Grading Tables information from view

6.10.0 (19-03-2020)
- Refactor: Upgraded dependency of fenixedu-academic-core (PrecedentDegreeInformation split into 'completed' and 'previous')

6.9.1 (17-03-2020)
- Refactor: Integrating migration-classes into ulisboa-specifications

6.9.0 (12-03-2020)
- New feature: Support for Java 11

6.8.1 (10-03-2020)
- Fix: Root aggregators should not use grade scale validators for curriculum aggregator entry
- Fix: Allow improvement evaluations of curriculum aggregator childs
- Fix: ExecutionInterval method overloading dispatching

6.8.0 (10-03-2020)
- Refactor: Upgraded dependency of fenixedu-academic-core (Removed deprecated relation between PrecedentDegreeInformation and Registration)

6.7.0 (04-03-2020)
- Refactor: Upgraded dependency of fenixedu-academic-core (Removed deprecated relation between PrecedentDegreeInformation and PersonalIngressionData)

6.6.1 (26-02-2020)
- Refactor: Upgraded dependency of fenixedu-academic-core 

6.6.0 (20-02-2020)
- Refactor: Rename GradeScale relations to refer GradeScale entity instead of GradeScaleEnum

6.5.3 (19-02-2020)
- Refactor: Rename enum type GradeScale to GradeScaleEnum
- Refactor: Remove references to GradeScaleEnum values

6.5.2 (12-02-2020)
- Improvement: Add mark that tuition penalty was created by academic debt generation rule instead of academic service request in the Registration details 