@@ -57,12 +57,12 @@
 		<dependency>
 			<groupId>com.qubit.solution.fenixedu</groupId>
 			<artifactId>fenixedu-academic-core</artifactId>
-			<version>29.0.0</version>
+			<version>30.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.fenixedu</groupId>
 			<artifactId>fenixedu-academic-extensions</artifactId>
-			<version>4.6.1</version>
+			<version>4.7.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.fenixedu</groupId>
