@@ -1,3 +1,5 @@
+- Refactor: Upgraded dependency of fenixedu-academic-core (Shifts capacity by type)
+
 6.11.1 (25-04-2020)
 - Refactor: Replace fenixedu-academic-treasury dependency by fenixedu-academic-treasury-base and fenixedu-academic-treasury-ui
 
